--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="topnav">
+        <img id="LOGO" src="img/COD_LOGO.webp" alt="COD">
+        <a ref="index.html">Home</a>
+        <a href="galerij.html">Galerij</a>
+        <a href="faq.html">FAQ</a>
+    </div>
+
+    
+    <img id="titel" src="img/COD_TITLE.png" alt="Call Of Duty Black Ops 6">
+    <img id="background" src="img/background01.webp" alt="background">
+    <div style="height: 10000px"></div>
+</body>
+</html>
 
