--- a/galerij.html
+++ b/galerij.html
@@ -3,14 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Doon of the Dark Ages - Gallery</title>
+    <link rel="stylesheet" href="css/galerij-style.css">
 </head>
 <body>
+
     <div class="topnav">
         <a href="index.html">Home</a>
         <a href="galerij.html">Galerij</a>
+        <a href="review.html">Recensies</a>
+        <a href="forms.html">Stel uw vraag</a>
         <a href="faq.html">FAQ</a>
     </div>
+
+    <header>
+        <h1>Doom The Dark Ages</h1>
+        <p>Welkom bij de officiële galerij van Doom The Dark Ages. Verken de wereld van de donkere eeuwen door deze afbeeldingen! <br> Klik op een afbeelding om te downloaden!</p>
+    </header>
+
+    <main class="gallery">
+        <div class="gallery-item">
+            <a href="img/207b2a90-a138-4477-8e18-95877daec2c4.png" download>
+                <img src="img/207b2a90-a138-4477-8e18-95877daec2c4.png" alt="Voorbeeld 1">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="img/doom-the-dark-ages-trailer-678x381.png" download>
+                <img src="img/doom-the-dark-ages-trailer-678x381.png" alt="Voorbeeld 2">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="img/Doom-Dark-Ages.png" download>
+                <img src="img/Doom-Dark-Ages.png" alt="Voorbeeld 3">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="img/DOOM-The-Dark-Ages-header.png" download>
+                <img src="img/DOOM-The-Dark-Ages-header.png" alt="Voorbeeld 4">
+            </a>
+        </div>
+
+        <div class="gallery-item">
+            <a href="img/media-screenshot-02.png" download>
+                <img src="img/media-screenshot-02.png" alt="Voorbeeld 5">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="img/hq720.png" download>
+                <img src="img/hq720.png" alt="Voorbeeld 6">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="img/images (2).png" download>
+                <img src="img/images (2).png" alt="Voorbeeld 7">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="img/you-liking-the-more-gritty-aesthetic-of-tda-v0-q1e9wj0oosee1.png" download>
+                <img src="img/you-liking-the-more-gritty-aesthetic-of-tda-v0-q1e9wj0oosee1.png" alt="Voorbeeld 8">
+            </a>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Doom: The Dark Ages. All rights reserved.</p>
+    </footer>
 </body>
 </html>
+
+
