--- a/index.html
+++ b/index.html
@@ -4,20 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Doom The Dark Ages</title>
 </head>
 <body>
     <div class="topnav">
-        <img id="LOGO" src="img/COD_LOGO.webp" alt="COD">
-        <a ref="index.html">Home</a>
+        <a href="index.html">Home</a>
         <a href="galerij.html">Galerij</a>
+        <a href="review.html">Recensies</a>
+        <a href="forms.html">Stel uw vraag</a>
         <a href="faq.html">FAQ</a>
     </div>
 
+    <h2>Welcome to the darkness: <br>Doom The Dark Ages</h2>
+
+    <p>"Maak je klaar voor een epische avontuur in een wereld vol mysterie, duisternis en gevaar. 'Doom: The Dark Ages' neemt je mee terug naar een tijdperk van zwaarden, magie en onvoorstelbare vijanden. Durf je de duistere krachten aan te nemen die deze wereld teisteren?"</p>
+
+    <button id="trailer_button" onclick="window.location.href='https://www.youtube.com/watch?v=Wd1tevNW73k&embeds_referring_euri=https%3A%2F%2Fwww.bing.com%2F&embeds_referring_origin=https%3A%2F%2Fwww.bing.com&source_ve_path=MzY4NDIsMjM4NTE'">Bekijk de trailer</button>
+   
+    <h3>Beschikbaar op 15/5/2025</h3>
+
+    <h3 id="whitelist">Pre-order nu!</h3>
+
+    <a href="https://store.steampowered.com/app/3017860/DOOM_The_Dark_Ages/" target="_blank"><img id="steam" src="img/steam.webp" alt=""></a>
+
+
+    <img id="background" src="img/background01.jpg" alt="background">
+    <img id="arrow" src="img/arrow.png" alt="">
+    <div style="height: 4000px"></div>
+
+    <img id="image01" src="img/image01.webp" alt="">
+    <h1 id="title01">Return to a Dark and Dangerous Past</h1>
+    <p id="text01">Stap in de wereld van Doom: The Dark Ages, waar middeleeuwse mythes samensmelten met duistere fantasie. Als een eenzame ridder, achtergelaten door je orde en omringd door ondoden en demonen, moet je vechten voor overleving in een wereld vol mysterie en gevaar. Met enkel je zwaard, schild en een ijzeren wil trotseer je kastelen vol valstrikken en dorpen overgenomen door chaos.</p>
+
+    <img id="image02" src="img/image02.webp" alt="">
+    <h1 id="title02">Explore a Gothic, Medieval World </h1>
+    <p id="text02">De wereld van Doom: The Dark Ages is zowel prachtig als angstaanjagend. Van gotische kathedralen tot donkere bossen vol kwade geesten, elk gebied vertelt zijn eigen verhaal. Ontmoet bondgenoten – of vijanden – en ontdek de waarheid achter een kwaadaardige vloek die de wereld in zijn greep houdt. Maar pas op, elk pad dat je bewandelt zit vol verborgen gevaren.</p>
+
+    <img id="image03" src="img/image03.webp" alt="">
+    <h1 id="title03">Fight On Your Terms</h1>
+    <p id="text03">Bereid je voor op intense gevechten die brute kracht en strategisch denken vereisen. Combineer middeleeuwse wapens zoals zwaarden, bijlen en bogen met duistere krachten die je van gevallen vijanden verzamelt. Gebruik de omgeving om een voordeel te behalen of ga recht op je doel af in een bloedstollend duel. Pas op: je vijanden leren van je fouten.</p>
     
-    <img id="titel" src="img/COD_TITLE.png" alt="Call Of Duty Black Ops 6">
-    <img id="background" src="img/background01.webp" alt="background">
-    <div style="height: 10000px"></div>
+    <img id="image04" src="img/image04.webp" alt="">
+    <h1 id="title04">Forge Your Legacy</h1>
+    <p id="text04">In Doom: The Dark Ages is niets wat het lijkt. Bouw je uitrusting en verzamel krachtige artefacten om je kansen te vergroten tegen steeds moeilijkere vijanden. Of je nu kiest voor een pad van eer of corruptie, jouw keuzes zullen bepalen hoe de wereld zich aanpast en welke legendes over jou verteld worden.</p>
+    
+    <footer>
+        <p id="copyright">&copy; 2025 Doom: The Dark Ages. All rights reserved.</p>
+    </footer>
 </body>
 </html>
 
